# OrthographicDenseMatching

./: CMakeLists.txt  DOMGenerate.cpp  README.md  loadCompile.cpp  readme.md
dependencies/cereal/vs2013/performance/: performance.vcxproj
nonFree/sift/: SIFT_describer.hpp
openMVG/geometry/: pose3.hpp
openMVG/matching_image_collection/: Matcher_Regions.cpp  Pair_Builder.hpp
openMVG/sfm/: CMakeLists.txt  kmeans.hpp  sfm_data.hpp  sfm_data_BA_ceres.hpp  sfm_data_io.hpp  sfm_landmark.hpp  sfm_view.hpp  switch.hpp
openMVG/sfm/pipelines/: sfm_regions_provider_cache.hpp
patch/domGrid/: cellBySfmCell.hpp  domExtInterface.hpp  getGridRange.hpp  gridWidthHeight.hpp
patch/grid/: gridByVector.hpp  gridInterface.hpp  interfaceByDom.hpp
patch/imgSelect/: totalBestViewMaker.hpp
patch/initDOM/: addInitBackground.hpp  initDomByCloud.hpp  initDomWithCloudWithScoreDown.hpp  mvgInitDomByCloud.hpp  mvgInitDomByExistDomByCloud.hpp  transferDom2DomByCloud.hpp
patch/pointcloud/: 3DPointWithScore.hpp  transDom2CloudWithScore.hpp  transDom2Pointcloud.hpp
patch/process/: domGenerate.hpp  domGenerateWithIndicate.hpp  orthographicDenseMatching.hpp
patch/sfm/: getInfoFromSfm.hpp
patchHeaders/: absProcess.hpp  changeViewCenter.hpp  copyPoint.hpp  copyPointProcess.hpp  cutPoint.hpp  deleteViews.hpp  fileException.hpp  findMapNewKey.hpp  getCertainDim.hpp  isCvViewEmpty.hpp  judgeRangeDim1.hpp  mvgGetPoint.hpp
software/SfM/: CMakeLists.txt  InterfaceMVS.h  addCloudToDomTest.cpp  convertDom2CloudTest.cpp  domIOTest.cpp  generateWithIndicate.cpp  io_readGT.hpp  main_ComputeFeatures.cpp  main_ComputeFeatures_gpu.cpp  main_ComputeMatches.cpp  main_ComputeMatches_gpu.cpp  main_CopyAndChangeName.cpp  main_ExportUndistortedImages.cpp  main_GetFile.cpp  main_GetSparse.cpp  main_GlobalSfM.cpp  main_GlobalSfM_4.cpp  main_GlobalSfM_4_margeTest.cpp  main_GlobalSfM_AfterMerge.cpp  main_GlobalSfM_Second.cpp  main_GlobalSfM_changeBAStep_load.cpp  main_GlobalSfM_changeBAStep_save.cpp  main_GlobalSfM_forSimulation.cpp  main_GlobalSfM_forSimulation_afterOptim.cpp  main_GlobalSfM_g2o.cpp  main_GlobalSfM_mergeForGrid.cpp  main_GlobalSfM_mergeWithGrid.cpp  main_GlobalSfM_single.cpp  main_GlobalSfM_step22.cpp  main_GlobalSfM_sub.cpp  main_GlobalSfM_test.cpp  main_GlobalSfM_testWaterPlane.cpp  main_GlobalSfM_water.cpp  main_GlobalSfM_water2.cpp  main_GlobalSfM_water3.cpp  main_GlobalSfM_water4.cpp  main_GlobalSfM_water5.cpp  main_GlobalSfM_water6.cpp  main_MergeSparse.cpp  main_PreparingGCPs.cpp  (+9 more)
software/build-ui-Desktop-Default/: CMakeCache.txt  Project.cbp
software/build-ui-Desktop-Default/SfM/: Makefile  cmake_install.cmake
software/build-ui-Desktop-Default/SfM/control_points_registration/: cmake_install.cmake
src/: CMakeLists.txt
src/compileTest/: CMakeLists.txt  compileInitDom.cpp  说明.res
src/openMVG/cameras/: Camera_undistort_image.hpp
src/openMVG/robust_estimation/: guided_matching.hpp
src/openMVG/sfm/: sfm_data.hpp  sfm_data_BA_ceres.cpp  sfm_data_BA_ceres_camera_functor.hpp  sfm_landmark.hpp  sfm_view.hpp  switch.hpp
src/openMVG/sfm/pipelines/: sfm_regions_provider.hpp
src/openMVG/sfm/pipelines/global/: GlobalSfM_rotation_averaging.cpp  GlobalSfM_translation_averaging.cpp  GlobalSfM_translation_averaging.hpp  sfm_global_engine_relative_motions.cpp  sfm_global_engine_relative_motions.hpp
src/patchHeader/: getPMat.hpp  说明.res
src/patchHeader/domGrid/: cellExtInterface.hpp  cellInterface.hpp  domIO.hpp  domInterface.hpp  说明.res
src/patchHeader/grid/: bilinearInterpolate.hpp  gridByVector.hpp  gridByVectorIO.hpp  gridConfig.hpp  gridIO.hpp  gridInterface.hpp  initDomByInterpolate.hpp  interfaceByDom.hpp  interfaceByDomZ.hpp  onlyValueGrid.hpp  说明.res
src/patchHeader/grid/gridHeight/: getGridHeightByIndicate.hpp  heightGridToCloud.hpp  makeHeightBySfm.hpp  makeHeightGrid.hpp  说明.res
src/patchHeader/grid/initInterpolate/: initDomScore.hpp  说明.res
src/patchHeader/imgSelect/: getBestViewByKnownMat.hpp  getBestViewBySfm.hpp  occlusionJudger.hpp  说明.res
src/patchHeader/initDOM/: addMaskToDom.hpp  initDomByExist.hpp  initDomWithCloudWithScoreDown.hpp  mvgInitDomByCloud.hpp  mvgInitDomByExistDomByCloud.hpp  transferDom2DomByCloud.hpp
src/patchHeader/pointcloud/: transDom2CloudWithScore.hpp  说明.res
src/patchHeader/process/: domGenerate.hpp  domGenerateInterpolate.hpp  domGenerateWithIndicate.hpp  generateMask.hpp  generateMaskByMesh.hpp  orthographicDenseMatching.hpp
src/patchHeader/sfm/: copySfmView.hpp  copyViewsByRange.hpp  deleteInvalidObs.hpp  deletePointByHeightGrid.hpp  deletePointByRange.hpp  deleteViewByPriorDis.hpp  getInfoFromSfm.hpp  makeSfmRange.hpp  poseCombiner.hpp  relativeCenterAvg.hpp  sfmCombiner.hpp  structureObsSort.hpp
src/patchHeader/sfm/grid/: commonGrid.hpp  说明.res
src/patchHeaders/: absInpu.hpp  addPointToSfm.hpp  cmpLess.hpp  copyPointByRange.hpp  copyViewCenter.hpp  cutPointByLessZ.hpp  fileProcess.hpp  iterateView.hpp  judgeViewValid.hpp  loadMvgFile.hpp  mvgHeader.hpp  range2D.hpp  saveMvgFile.hpp  throwString.hpp  说明.res
src/software/SfM/: CMakeLists.txt  main_GlobalSfM_water5.cpp
src/software/build-ui-Desktop-Default/: Makefile  cmake_install.cmake
src/software/build-ui-Desktop-Default/SfM/adjacency_matrix_viewer/: Makefile  cmake_install.cmake
src/software/build-ui-Desktop-Default/SfM/control_points_registration/: Makefile  ui_openMVG_control_points_registration.cbp  ui_openMVG_control_points_registration_automoc.cpp
src/software/build-ui-Desktop-Default/SfM/control_points_registration/ui_openMVG_control_points_registration_automoc.dir/: moc_GraphicsMainWi_ZMAX4X32S5RHWY.cpp  moc_mainLayout_7TNVV2E43NC2NF.cpp
